# CodeSynthesisXSD-Binary

./: .gitignore  CMakeLists.txt  README.MD
build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Code_Synthesis_XSD.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt
build_test/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_test/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_test/x64/Debug/INSTALL/: INSTALL.recipe
build_test/x64/Debug/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_test/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_test/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
